initial setup from template
